Stub classes for:
1) form test
2) form twig
3) url controller
4) url class

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,114 +1,149 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <title>{% block title %}PIKL{% endblock %}</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <title>{% block title %}PIKL{% endblock %}</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <style type="text/css">
+    :root {
+      /* colors were in an image at https://creativexcorner.wordpress.com/2018/03/07/jean-michel-basquiat-one-of-the-last-natural-born-artists/ */
+      --vivid3: rgb(227, 191, 39);
+      --vivid1: rgb(29, 60, 171);
+      --vivid2: rgb(213, 90, 34);
+      --dark1: rgb(77, 23, 53);
+      --light1: rgb(197, 190, 170);
+      --light2: rgb(222, 223, 223);
+    }
 
-
-<style type="text/css">
-     :root {
-        /* from https://creativexcorner.wordpress.com/2018/03/07/jean-michel-basquiat-one-of-the-last-natural-born-artists/ */
-     --vivid3: rgb(227, 191, 39);
-     --vivid1: rgb(29, 60, 171);
-     --vivid2: rgb(213, 90, 34 );
-     --dark1: rgb(77, 23, 53);
-     --light1: rgb(197, 190, 170);
-     --light2: rgb(222, 223, 223);
-}
- body {
+    body {
       color: var(--dark1);
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
         sans-serif;
-        font-weight: 100;
-}
+      font-weight: 100;
+    }
 
-form {
-  margin: auto 5rem;
-}
+    form {
+      margin: auto 5rem;
+    }
 
-.monde {
-  /*==f=i=l=l==s=c=r=e=e=n==================*/
-background-color: var(--light2);
-  min-height: 100%;
-  width: auto;
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-  /* Set up positioning */
-  position: fixed;
-  /*==f=i=l=l==s=c=r=e=e=n==END============*/
-    display: flex;          /*(1)VERT*/
-    flex-direction: row;    /*(1)VERT*/
-    align-items: center;    /*(1)VERT*/
-    justify-content: center;  /*(2)HORIZ*/
-}
+    .monde {
+      /*==f=i=l=l==s=c=r=e=e=n==================*/
+      background-color: var(--light2);
+      min-height: 100%;
+      width: auto;
+      /* Set up proportionate scaling */
+      width: 100%;
+      height: auto;
+      /* Set up positioning */
+      position: fixed;
+      /*==f=i=l=l==s=c=r=e=e=n==END============*/
+      display: flex;
+      /*(1)VERT*/
+      flex-direction: row;
+      /*(1)VERT*/
+      align-items: center;
+      /*(1)VERT*/
+      justify-content: center;
+      /*(2)HORIZ*/
+    }
 
-.square-large {
-    border-radius: 3rem;
-    border: solid white 0.8rem;
-    height: 34rem;
-    margin: auto 4rem;
-    display: flex;          /*(1)VERT*/
-    flex-direction: column;    /*(1)VERT*/
-    align-items: center;    /*(1)VERT*/
-    justify-content: center;  /*(2)HORIZ*/
-}
+    .square-large {
+      border-radius: 3rem;
+      border: solid white 0.8rem;
+      height: 34rem;
+      margin: auto 4rem;
+      display: flex;
+      /*(1)VERT*/
+      flex-direction: column;
+      /*(1)VERT*/
+      align-items: center;
+      /*(1)VERT*/
+      justify-content: center;
+      /*(2)HORIZ*/
+    }
 
-.square-small {
-    border-radius: 3rem;
-    border: solid var(--dark1) 0.8rem;
-    margin: auto 5rem;
-    height: 15rem;
-    min-width: 12rem;
-    display: flex;          /*(1)VERT*/
-    flex-direction: row;    /*(1)VERT*/
-    align-items: center;    /*(1)VERT*/
-    justify-content: center;  /*(2)HORIZ*/
-    text-align: center;
-}
+    .square-small {
+      border-radius: 3rem;
+      border: solid var(--dark1) 0.8rem;
+      margin: auto 5rem;
+      height: 15rem;
+      min-width: 12rem;
+      display: flex;
+      /*(1)VERT*/
+      flex-direction: row;
+      /*(1)VERT*/
+      align-items: center;
+      /*(1)VERT*/
+      justify-content: center;
+      /*(2)HORIZ*/
+      text-align: center;
+    }
 
-.core {
-    color: #f66;
-    text-align: center;
-    margin: 1rem auto;
-    overflow-wrap: break-word;
-}
+    .core {
+      color: #f66;
+      text-align: center;
+      margin: 1rem auto;
+      overflow-wrap: break-word;
+    }
 
-.stripe {
-  height: 8rem;
-  width: 15rem;
-  background-color: var(--dark1);
-  color: yellow;
-  border: solid white 0.1rem;
-  overflow: scroll;
-}
+    .stripe {
+      height: 8rem;
+      width: 15rem;
+      background-color: var(--dark1);
+      color: yellow;
+      border: solid white 0.1rem;
+      overflow: scroll;
+    }
 
-.brand {
-  position: absolute;
-  right: 2rem;
-  bottom: 2rem;
-  width: 7%;
-}
+    /* IMAGE OF BRAND */
+    .brand {
+      position: absolute;
+      right: 2rem;
+      bottom: 2rem;
+      width: 7%;
+    }
 
-.title {
-  font-size: 4rem;
-}
+    .title {
+      font-size: 4rem;
+    }
 
-.subtitle {
-  font-size: 2rem;
-}
+    .subtitle {
+      font-size: 2rem;
+    }
 
-</style>
+  </style>
+  <script type="text/javascript">
+    let grub = (s) => {
+      let now = new Date();
+      now = now.toLocaleString();
+      console.log(`At {now} here is: {str1}`);
+      return s + "-" + s;
+    }
+  </script>
 
-</script>
+</head>
 
-    </head>
-    <body >
+<body>
 
+  <div class="monde">
+    <div class="square-large">
+      <h1 class="title"><code>Pikl</code></h1>
+      <h2 class="subtitle">Turn your URRRLLL into an URL.</h2>
+      <div class="square-small">
+        <!-- /*==============================*/ -->
+        <form oninput="out1.value = grub(str1.value)">
+          <input class="core" type="textarea" name="str1" /><br>
+          <div class="core stripe"><output name="out1" for="str1">void</output></div>
+        </form>
+        <!-- /*==============================*/ -->
+      </div>
+    </div>
+    <img class="brand" src=" http://cdn.onlinewebfonts.com/svg/img_481082.svg">
+  </div>
 
+</body>
 
-      </body></html>
+</html>
