restore point after typing in twig and form and controller but not working.  error in twig 'no form'

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -140,6 +140,10 @@
         </form>
         <!-- /*==============================*/ -->
       </div>
+
+
+      {# templates/task/new.html.twig #}
+      {{ form(form) }}
     </div>
     <img class="brand" src=" http://cdn.onlinewebfonts.com/svg/img_481082.svg">
   </div>
